added cart system pending checkout

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Styles for Font -->
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap");
+    </style>
     <title>e-Shop</title>
   </head>
   <body>
