added cart system

--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
     <!-- Styles for Font -->
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap");
+      @import url('https://fonts.googleapis.com/css2?family=Babylonica&family=Nunito&family=Roboto+Mono:wght@700&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Zeyada&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans&family=Zeyada&display=swap');
     </style>
-    <title>e-Shop</title>
+
+    <title>Only you</title>
   </head>
   <body>
     <div id="root"></div>
+     <!-- Portal for modal -->
+     <div id="portal"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
